# evoman_framework

./: dummy_demo.py  human_demo.py  neat_algorithms.py  neat_config.ini  neat_optimization.py  optimization_dummy.py  params.json  pyproject.toml
evoman/: player.py
neat-checkpoints/enemy_1/: run-1-neat-checkpoint-19  run-1-neat-checkpoint-9
neat-checkpoints/enemy_5/: run-1-neat-checkpoint-9
neat/ea1/enemy_1/: best_winner_igain.npy  max_stats.npy  mean_stats.npy  winner_genome.pkl
neat/ea1/enemy_5/: best_winner_igain.npy  max_stats.npy  mean_stats.npy  winner_genome.pkl
neat/ea1/enemy_8/: best_winner_igain.npy  max_stats.npy  mean_stats.npy  winner_genome.pkl
optimization_test/: best.txt  evoman_logs.txt  evoman_solstate  results.txt
test/: evoman_logs.txt
